Fix for connecting to FTP sites through HTTP proxy servers.

BUG:236630
REVIEW:100814
FIXED-IN:4.6.2